# xcc-roman-number-converter-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/: ci_dev.yml
.github/workflows/: ci.yml  ci_dev.yml  ci_prod.yml  testing.yml
src/xcc_roman_converter_api/: __init__.py  config.py  dtype_mapper.py  my_api.py  storage.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
