[project]
name = "xcc-roman-converter-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "psycopg[binary]>=3.2.9",
    "structlog>=25.4.0",
    "xcc_roman_converter@git+https://github.com/elifapa/xcc-roman-number-converter.git",
]

[project.scripts]
xcc-roman-converter-api = "xcc_roman_converter_api:my_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
ci = [
    "pre-commit>=4.3.0",
]
